--- a/catalogue.service
+++ b/catalogue.service
@@ -4,7 +4,7 @@ Description = Catalogue Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=MONGO_URL="mongodb://34.201.107.64:27017/catalogue"
+Environment=MONGO_URL="mongodb://mongodb.dineshdevops.shop:27017/catalogue"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=catalogue
 
