--- a/roboshop.conf
+++ b/roboshop.conf
@@ -7,8 +7,8 @@ location /images/ {
 location /api/catalogue/ { proxy_pass http://catalogue.dineshdevops.shop:8080/; }
 location /api/user/ { proxy_pass http://user.dineshdevops.shop:8080/; }
 location /api/cart/ { proxy_pass http://cart.dineshdevops.shop:8080/; }
-location /api/shipping/ { proxy_pass http://localhost:8080/; }
-location /api/payment/ { proxy_pass http://localhost:8080/; }
+location /api/shipping/ { proxy_pass http://shipping.dineshdevops.shop:8080/; }
+location /api/payment/ { proxy_pass http://payment.dineshdevops.shop:8080/; }
 
 location /health {
   stub_status on;
